# HOPS_V1

./: HOPS_V1.spec  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/: README.txt
core/: analyzer.py  config.py  database.py  design_check.py  design_pack.py  design_process.py  etsy_zip.py  exporter.py  installer.py  paths.py  run_design.py  run_master.py  shortcuts.py  split_up.py
